--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "pdfvuer": "^1.9.2",
         "sweetalert2": "^11.1.1",
         "vform": "^2.1.1",
+        "vue-multiselect": "^2.1.6",
         "vue-router": "^3.5.2",
         "vue2-dropzone": "^3.6.0",
         "vuetify": "^2.6.1",
