--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
+        "browser-sync": "^2.27.9",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "deepmerge": "^4.2.2",
         "laravel-mix": "^6.0.6",
@@ -28,11 +30,13 @@
     "dependencies": {
         "@pdftron/pdfjs-express-viewer": "^8.1.1",
         "bootstrap-vue": "^2.21.2",
+        "gsap": "^3.9.1",
         "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.29.1",
         "pdfjs-dist": "^2.7.570",
         "pdfvuer": "^1.9.2",
         "sweetalert2": "^11.1.1",
+        "velocity-animate": "^1.5.2",
         "vform": "^2.1.1",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.5.2",
